# Super_mario

./: CMakeLists.txt  README.md
docs/: README.md
src/: Game.cpp  main.cpp  resources.qrc  resources1.qrc  resources2.qrc  resources3.qrc  resources4.qrc  resources5.qrc
